--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/coverage-v8": "^4.0.15",
+    "@vitest/ui": "^4.0.15",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
@@ -25,6 +27,6 @@
     "globals": "^16.5.0",
     "prettier": "^3.7.4",
     "vite": "^4.3.9",
-    "vitest": "^1.6.0"
+    "vitest": "^4.0.15"
   }
 }
